--- a/index.html
+++ b/index.html
@@ -7,22 +7,58 @@
     <meta>
     <meta>
     <meta>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <title>CV José Becerra</title>
 </head>
 <body>
-    <h1>Prueba</h1>
     <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+            <div class="container">
+              <a href="index.html" class="navbar-brand">José becerra</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarMenu"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarMenu">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                    <a href="#sobreMi" class="nav-link">Sobre mí</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#experienciaLaboral" class="nav-link"
+                      >Experiencia laboral</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a href="#educacion" class="nav-link">Educación</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#habilidades" class="nav-link">Habilidades</a>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">Portfolio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#contacto" class="nav-link">Contacto</a>
+                  </li>
+                </ul>
+                </div>
+            </div>
+        </nav>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
 </body>
 </html>
