--- a/index.html
+++ b/index.html
@@ -1,64 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta>
-    <meta>
-    <meta>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>CV José Becerra</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta>
+  <meta>
+  <meta>
+  <script src="https://kit.fontawesome.com/815f642038.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <title>CV José Becerra</title>
+
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-            <div class="container">
-              <a href="index.html" class="navbar-brand">José becerra</a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarMenu"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarMenu">
-                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                    <a href="#sobreMi" class="nav-link">Sobre mí</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#experienciaLaboral" class="nav-link"
-                      >Experiencia laboral</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a href="#educacion" class="nav-link">Educación</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#habilidades" class="nav-link">Habilidades</a>
-                  <li class="nav-item">
-                    <a href="#" class="nav-link">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#contacto" class="nav-link">Contacto</a>
-                  </li>
-                </ul>
-                </div>
-            </div>
-        </nav>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+        <a href="index.html" class="navbar-brand">José becerra</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarMenu">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="#sobreMi" class="nav-link">Sobre mí</a>
+            </li>
+            <li class="nav-item">
+              <a href="#experienciaLaboral" class="nav-link">Experiencia laboral</a>
+            </li>
+            <li class="nav-item">
+              <a href="#educacion" class="nav-link">Educación</a>
+            </li>
+            <li class="nav-item">
+              <a href="#habilidades" class="nav-link">Habilidades</a>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contacto" class="nav-link">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    </header>
-    <main>
+  </header>
+  <main>
 
-    </main>
-    <footer>
+  </main>
+  <footer class="bg-dark text-light text-center py-5">
+    <div class="container">
+      <a href="https://www.linkedin.com/joseeebc" class="text-light"><i class="fab fa-linkedin fa-2x mr-1"></i></a>
+      <a href="https://www.linkedin.com/joseeebc" class="text-light"><i class="fab fa-github-square fa-2x"></i></a>
+      <p class="lead mt-2">José Becerra</p>
+      <p>&copy; Todos los derechos reservados</p>
+    </div>
 
-    </footer>
+  </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
