Se diseñó el encabezado y se agregó una foto de avatar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
 
   </header>
   <main>
+    <section class="bg-dark py-4 text-center text-light">
+      <img src="/img/you_Mesa de trabajo 1.png" alt="Avatar jose" class="avatar mb-3">
+      <h2>José Becerra</h2>
+      <p class="lead">Graphic designer & Software developer</p>
+
+    </section>
 
   </main>
   <footer class="bg-dark text-light text-center py-5">
