Se agregó un article para la zona de información personal

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
       <p class="lead">Graphic designer & Software developer</p>
 
     </section>
+    <section class="container my-5">
+      <h1 class="text-center display-4">Sobre mí</h1>
+      <article class="shadow p-3 rounded">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio eius consectetur doloremque voluptas ex, quia laudantium maxime nobis alias laborum officiis assumenda ducimus! Quibusdam?</p>
+
+      </article>
+      
+    </section>
 
   </main>
   <footer class="bg-dark text-light text-center py-5">
