Agregamos información personal a la sección sobre mí

--- a/index.html
+++ b/index.html
@@ -58,11 +58,28 @@
 
     </section>
     <section class="container my-5">
-      <h1 class="text-center display-4">Sobre mí</h1>
+      <section id="sobreMi">
+        <h1 class="text-center display-4">Sobre mí</h1>
       <article class="shadow p-3 rounded">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio eius consectetur doloremque voluptas ex, quia laudantium maxime nobis alias laborum officiis assumenda ducimus! Quibusdam?</p>
+        <h2>Información personal</h2>
+        <hr>
+        <ul class="list-unstyled">
+          <li> <span class="font-weight-bold"> Edad:</span> 30 años</li>
+          <li> <span class="font-weight-bold"> Email</span> becerrajl1991@gmail.com</li>
+          <li> <span class="font-weight-bold"> Teléfono:</span> +54 381 6105616</li>
+          <li> <span class="font-weight-bold"> Dirección:</span> Pje. Carlos gardel 2167, Yerba Buena, Tucumán.</li>
+        </ul>
+
+        <hr>
+        <h2>
+          Mi historia
+        </h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus blanditiis, temporibus amet reiciendis tempora delectus eum numquam enim maiores? Alias atque, blanditiis quisquam repellat fugiat eos vel voluptatibus consectetur ab nemo non vero, ut eius doloremque ex quas, nobis dolore tenetur fuga vitae modi odio? Aut atque, veritatis quasi, suscipit eveniet sed aspernatur earum placeat qui illo quod delectus voluptatem vel deleniti iusto, harum expedita repellendus minus! Veniam, quam minima fuga ipsa eos hic culpa maxime. Soluta doloremque fugit quibusdam corporis, voluptates veritatis iusto tempore facilis consequuntur, asperiores magni. Laboriosam quod ducimus saepe nam deserunt, adipisci unde vitae itaque eligendi.</p>
 
       </article>
+
+      </section>
+      
       
     </section>
 
