--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
     <section class="container my-5">
       <section id="sobreMi">
-        <h1 class="text-center display-4">Sobre mí</h1>
+        <h2 class="text-center display-4">Sobre mí</h2>
       <article class="shadow p-3 rounded">
         <h2>Información personal</h2>
         <hr>
@@ -77,6 +77,32 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus blanditiis, temporibus amet reiciendis tempora delectus eum numquam enim maiores? Alias atque, blanditiis quisquam repellat fugiat eos vel voluptatibus consectetur ab nemo non vero, ut eius doloremque ex quas, nobis dolore tenetur fuga vitae modi odio? Aut atque, veritatis quasi, suscipit eveniet sed aspernatur earum placeat qui illo quod delectus voluptatem vel deleniti iusto, harum expedita repellendus minus! Veniam, quam minima fuga ipsa eos hic culpa maxime. Soluta doloremque fugit quibusdam corporis, voluptates veritatis iusto tempore facilis consequuntur, asperiores magni. Laboriosam quod ducimus saepe nam deserunt, adipisci unde vitae itaque eligendi.</p>
 
       </article>
+
+      </section>
+      <section id="experienciaLaboral" class="my-5">
+        <h2 class="text-center display-4">Experiencia Laboral</h2>
+        <article>
+          <div class="card mb-3 shadow my-4">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center justify-content-center flex-column bg-secondary text-light">
+                <p class="lead">Fecha desde - Fecha hasta</p>
+                <p class="lead">Lugar de trabajo</p>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Puesto de trabajo 1</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe temporibus commodi, magnam porro autem, ducimus corporis esse facilis error nobis consequuntur soluta nemo explicabo aspernatur eveniet quibusdam magni blanditiis nam iure aliquid velit in a? Impedit dolorem, distinctio, doloremque eos natus accusamus nulla labore vitae ipsum sequi reiciendis velit optio!</p>
+                  <p><span class="font-weight-bold"> Habilidades:</span> 
+                    <span class="badge badge-danger">HTML5</span> 
+                    <span class="badge badge-danger">CSS3</span> 
+                    <span class="badge badge-danger">Bootstrap</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </article>
 
       </section>
       
