se agregaron mas cards con experiencia laboral

--- a/index.html
+++ b/index.html
@@ -100,6 +100,42 @@
               </div>
             </div>
           </div>
+          <div class="card mb-3 shadow my-4">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center justify-content-center flex-column bg-secondary text-light">
+                <p class="lead">Fecha desde - Fecha hasta</p>
+                <p class="lead">Lugar de trabajo</p>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Puesto de trabajo 1</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe temporibus commodi, magnam porro autem, ducimus corporis esse facilis error nobis consequuntur soluta nemo explicabo aspernatur eveniet quibusdam magni blanditiis nam iure aliquid velit in a? Impedit dolorem, distinctio, doloremque eos natus accusamus nulla labore vitae ipsum sequi reiciendis velit optio!</p>
+                  <p><span class="font-weight-bold"> Habilidades:</span> 
+                    <span class="badge badge-danger">HTML5</span> 
+                    <span class="badge badge-danger">CSS3</span> 
+                    <span class="badge badge-danger">Bootstrap</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3 shadow my-4">
+            <div class="row no-gutters">
+              <div class="col-md-4 d-flex align-items-center justify-content-center flex-column bg-secondary text-light">
+                <p class="lead">Fecha desde - Fecha hasta</p>
+                <p class="lead">Lugar de trabajo</p>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Puesto de trabajo 1</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe temporibus commodi, magnam porro autem, ducimus corporis esse facilis error nobis consequuntur soluta nemo explicabo aspernatur eveniet quibusdam magni blanditiis nam iure aliquid velit in a? Impedit dolorem, distinctio, doloremque eos natus accusamus nulla labore vitae ipsum sequi reiciendis velit optio!</p>
+                  <p><span class="font-weight-bold"> Habilidades:</span> 
+                    <span class="badge badge-danger">HTML5</span> 
+                    <span class="badge badge-danger">CSS3</span> 
+                    <span class="badge badge-danger">Bootstrap</span></p>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
         </article>
