--- a/index.html
+++ b/index.html
@@ -157,8 +157,33 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="card shadow">
+              <div class="card-header bg-secondary text-light text-center pt-4">
+                <p>Fecha desde - Fecha hasta</p>
+                <p>Institución</p>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Curso o título</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit provident, incidunt cum itaque consequatur doloremque!</p>
+                <p><span class="font-weight-bold">Estado:</span> Completo</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card shadow">
+              <div class="card-header bg-secondary text-light text-center pt-4">
+                <p>Fecha desde - Fecha hasta</p>
+                <p>Institución</p>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Curso o título</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit provident, incidunt cum itaque consequatur doloremque!</p>
+                <p><span class="font-weight-bold">Estado:</span> Completo</p>
+              </div>
+            </div>
+          </div>
+          
 
 
         </article>
