Se agregó un mail de contacto

--- a/index.html
+++ b/index.html
@@ -308,6 +308,13 @@
           </article>
         </section>
       </section>
+      <section id="contacto" class="my-4">
+        <h2 class="text-center display-4">Contacto</h2>
+        <article class="shadow p-3 rounded">
+          <p>Si querés conocer mas de mi trabajo, contactame a <a href="mailto:becerrajl1991@gmail.com">becerrajl1991@gmail.com</a></p>
+
+        </article>
+      </section>
     </section>
   </main>
   <footer class="bg-dark text-light text-center py-5">
