Se agregaron detalles finales en el estilo del scroll

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
         </article>
 
-        <section id="habilidades">
+        <section id="habilidades my-5">
           <h2 class="text-center display-4">Habilidades</h2>
           <article class="shadow p-3 rounded row">
             <div class="col-md-6">
