Se modificó el color del título sobre mí

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
     <section class="container my-5">
       <section id="sobreMi">
-        <h2 class="text-center display-4">Sobre mí</h2>
+        <h2 class="text-center display-4 text-danger">Sobre mí</h2>
         <article class="shadow p-3 rounded">
           <h2>Información personal</h2>
           <hr />
